plugins {
	id 'java'
	id 'idea'
	id 'checkstyle'
	id 'com.diffplug.spotless' version '6.21.0'
}

allprojects {
	group = 'org.daiitech'
	version = '0.0.1-SNAPSHOT'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

ext.sharedJvmArgs = [
		'--enable-preview',
		'--add-modules', 'jdk.incubator.vector',

		// Core reflection & language
		'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
		'--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
		'--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.invoke.util=ALL-UNNAMED',

		// Collections, concurrency, streams, time
		'--add-opens', 'java.base/java.util=ALL-UNNAMED',
		'--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
		'--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
		'--add-opens', 'java.base/java.time=ALL-UNNAMED',

		// IO & Networking
		'--add-opens', 'java.base/java.io=ALL-UNNAMED',
		'--add-opens', 'java.base/java.net=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.net=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.net.www.protocol.jar=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.net.www.protocol.file=ALL-UNNAMED',

		// IO / Compression
		'--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
		'--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',

		// Security
		'--add-opens', 'java.base/java.security=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.security.x509=ALL-UNNAMED',

		// Math
		'--add-opens', 'java.base/java.math=ALL-UNNAMED',

		// NIO internals
		'--add-opens', 'java.base/java.nio=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.channels=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.channels.spi=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.file=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.file.spi=ALL-UNNAMED',
		'--add-opens', 'java.base/java.nio.file.attribute=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.nio=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.nio.cs=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',

		// Reflection utilities
		'--add-opens', 'java.base/sun.reflect.annotation=ALL-UNNAMED',
		'--add-opens', 'java.base/sun.reflect.misc=ALL-UNNAMED',

		// XML / JAXP
		'--add-opens', 'java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED',
		'--add-opens', 'java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED',
		'--add-opens', 'java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED',
		'--add-opens', 'java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED',

		// Desktop / Swing / AWT
		'--add-opens', 'java.desktop/java.awt=ALL-UNNAMED',
		'--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
		'--add-opens', 'java.desktop/javax.swing=ALL-UNNAMED',
		'--add-opens', 'java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
		'--add-opens', 'java.desktop/sun.java2d=ALL-UNNAMED',

		// Reflection / GC internals
		'--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED',

		// Internal JDK packages
		'--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
		'--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
		'--add-opens', 'java.base/jdk.internal.vm=ALL-UNNAMED',
		'--add-opens', 'java.base/jdk.internal.logger=ALL-UNNAMED',
		'--add-opens', 'java.base/jdk.internal.event=ALL-UNNAMED'
]

tasks.register('javadocAll', Javadoc) {
	description = 'Generates combined Javadoc for all subprojects (annotations + main)'
	group = 'documentation'

	// Collect all Java sources from subprojects
	source subprojects.collect { it.sourceSets.main.allJava }

	// Combine all compile classpaths
	classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })

	// Output directory
	destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile

	// Reuse your same options
	options {
		encoding = 'UTF-8'
		charSet = 'UTF-8'
		memberLevel = JavadocMemberLevel.PRIVATE
		author = true
		version = true
		windowTitle = "${rootProject.name} ${rootProject.version} API"
		docTitle = "${rootProject.name} API Documentation"
		addBooleanOption('Xdoclint:none', true)
	}

	options.addStringOption('--enable-preview')
	options.addStringOption('-add-modules', 'jdk.incubator.vector')

	// Ensure all subprojects are compiled first
	dependsOn subprojects.collect { it.tasks.named('classes') }
}

tasks.register('copyJavadocAll', Copy) {
	description = 'Copies combined Javadoc to docs-site/javadoc'
	group = 'documentation'

	dependsOn tasks.named('javadocAll')

	from tasks.named('javadocAll').get().destinationDir
	into "$rootDir/docs-site/javadoc"
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'idea'
	apply plugin: 'checkstyle'
	apply plugin: 'com.diffplug.spotless'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
	}

	tasks.withType(ProcessResources).configureEach {
		filteringCharset = 'UTF-8'
	}

	tasks.withType(JavaExec).configureEach {
		jvmArgs += rootProject.ext.sharedJvmArgs
	}

	tasks.withType(Test).configureEach {
		jvmArgs += rootProject.ext.sharedJvmArgs
		useJUnitPlatform()
	}

	tasks.withType(Javadoc).configureEach {
		source = sourceSets.main.allJava
		classpath = sourceSets.main.compileClasspath
		destinationDir = layout.buildDirectory.file("docs/javadoc").get().asFile
		options {
			encoding = 'UTF-8'
			charSet = 'UTF-8'
			memberLevel = JavadocMemberLevel.PRIVATE
			author = true
			version = true
			// Add a window title for the generated docs
			windowTitle = "${project.name} ${project.version} API"
			// Add a doc title on the main page
			docTitle = "${project.name} API Documentation"
			// Show deprecated members in docs
			addBooleanOption('Xdoclint:none', true)  // disables strict lint checks
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		testImplementation(platform('org.junit:junit-bom:5.7.0'))
		testImplementation('org.junit.jupiter:junit-jupiter')
	}

	checkstyle {
		toolVersion = '10.0'
		configFile = file("../config/checkstyle/checkstyle.xml")
		ignoreFailures = false
		showViolations = true
	}


	spotless {
		java {
			eclipse().configFile('../config/eclipse-formatter.xml')
			removeUnusedImports()
			importOrder('java',
					'javax',
					'org',
					'picocli',
					'com',
					'',
					'static java',
					'static javax',
					'static org',
					'static picocli',
					'static com')
			trimTrailingWhitespace()
			endWithNewline()
			indentWithTabs()

			targetExclude('build/generated-src/antlr/main/**/*.java')
		}
		format 'misc', {
			target '*.gradle', '*.md', '.gitignore'
			trimTrailingWhitespace()
			endWithNewline()
		}
	}
}
